--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Advent+Pro">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poiret+One">
-	<link rel="stylesheet" href="sava.scss">
-	<link rel="stylesheet" href="token.scss">
+	<link rel="stylesheet" href="sava.css">
+	<link rel="stylesheet" href="token.css">
 
 	<!-- Scripts -->
 	<script type="text/javascript" src="sava.js"></script>
