Updated fonts, added base pages

--- a/index.html
+++ b/index.html
@@ -5,24 +5,6 @@
 	<meta charset="utf-8">
 
 	<!-- Styles -->
-    <style>
-        @font-face {
-            font-family: "Bookinsanity";
-            src: url("/fonts/Bookinsanity/Bookinsanity.otf");
-        }
-        @font-face {
-            font-family: "Nodesto Caps Condensed";
-            src: url("/fonts/Nodesto Caps Condensed/Nodesto Caps Condensed.otf");
-        }
-        @font-face {
-            font-family: "Scaly Sans";
-            src: url("/fonts/Scaly Sans/Scaly Sans.otf");
-        }
-        @font-face {
-            font-family: "Scaly Sans Caps";
-            src: url("/fonts/Scaly Sans Caps/Scaly Sans Caps.otf");
-        }
-    </style>
 	<link rel="stylesheet" href="style.css">
 
 	<!-- Scripts -->
@@ -51,7 +33,7 @@
         <div class="nav-container">
             <a class="nav-tab" href="#tab-deck-of-many">Deck of Many</a>
             <a class="nav-tab" href="#tab-spirit-board">Spirit Board</a>
-            <a class="nav-tab" href="#tab-tarokka-deck">Tarokka Deck</a>
+            <a class="nav-tab" href="#tab-tarokka-deck">Tarokka</a>
             <a class="nav-tab" href="#tab-sava">Sava</a>
             <span class="nav-tab-slider"></span>
         </div>
@@ -59,19 +41,19 @@
     <main class="main">
         <section class="slider" id="tab-deck-of-many">
             <a href="./tools/deck-of-many/index.html"><h1>Deck of Many Things</h1></a>
-            <h2>a mystical deck of 22 cards</h2>
+            <h2>22-card deck of great fate and fortune</h2>
         </section>
-        <section class="slider" id="tab-tarokka-board">
+        <section class="slider" id="tab-spirit-board">
             <a href="./tools/spirit-board/index.html"><h1>Spirit Board</h1></a>
-            <h2>a mystical planchette and answer slate</h2>
+            <h2>vistana séance planchette and answer slate</h2>
         </section>
         <section class="slider" id="tab-tarokka-deck">
-            <a href="./tools/tarokka-deck/index.html"><h1>Tarokka Deck</h1></a>
-            <h2>a vistana fortune telling tool</h2>
+            <a href="./tools/tarokka-deck/index.html"><h1>Tarokka</h1></a>
+            <h2>vistana fortune telling cards</h2>
         </section>
         <section class="slider" id="tab-sava">
-            <a href="./tools/sava/index.html"><h1>Sava Game</h1></a> 
-            <h2>a traditional drow strategy game</h2>
+            <a href="./tools/sava/index.html"><h1>Sava</h1></a> 
+            <h2>traditional drow strategy game</h2>
         </section>
     </main>
     <canvas class="background">Your browser does not support the HTML5 canvas tag.</canvas>
