--- a/tools/spirit-board/index.html
+++ b/tools/spirit-board/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 
 	<!-- Styles -->
+  <link rel="stylesheet" href="../tool-nav.css">
 	<link rel="stylesheet" href="style.css">
 
 	<!-- Scripts -->
