--- a/tools/spirit-board/index.html
+++ b/tools/spirit-board/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="style.css">
 
 	<!-- Scripts -->
+  <script type="text/javascript" src="../draggable.js" defer></script>
 	<script type="text/javascript" src="script.js" defer></script>
 
 </head>
