Cleaning up Sava

--- a/tools/sava/index.html
+++ b/tools/sava/index.html
@@ -102,9 +102,9 @@
 					<h2>Components</h2>
 					<p>The game includes the following elements:</p>
 					<ul>
-						<li>🕷️<strong>Sava Board:</strong> shaped similar a spiderweb</li>
-						<li>🎲<strong>Spider Bones:</strong> a pair of 8-sided ivory dice</li>
-						<li>♟️<strong>&nbsp;Player Tokens x2:</strong> including 1 Matron, 2 Priestesses, 2 Sorcerers, 2 Weapon Masters, and 10 Orcs</li>
+						<li>🕷️<strong>Sava Board:</strong> shaped similar to a spiderweb</li>
+						<li>🎲<strong>Spider Bones:</strong> a pair of 8-sided dice</li>
+						<li>♟️<strong>Player Tokens x2:</strong> including 1 Matron, 2 Priestesses, 2 Sorcerers, 2 Weapon Masters, and 10 Orcs</li>
 					</ul>
 				</br>
 					<h2>Movement and Capture</h2>
