--- a/tools/deck-of-many/index.html
+++ b/tools/deck-of-many/index.html
@@ -6,18 +6,31 @@
 
 	<!-- Styles -->
   <link rel="stylesheet" href="../tool-nav.css">
+	<link rel="stylesheet" href="../modal.css">
 	<link rel="stylesheet" href="style.css">
 
 	<!-- Scripts -->
-	<script type="text/javascript" src="script.js" defer></script>
+	<script type="text/javascript" src="./script.js" defer></script>
 
 </head>
 <body>
     <div class="nav">
-      <a href="../../index.html"><h1>HOME</h1></a>
+        <a href="../../index.html"><h1>HOME</h1></a>
+        <!-- <a href="#" id="open-modal"><h1>about</h1></a> -->
+        <a onclick="showCard(0)"><h1>reset</h1></a>
     </div>
-    <div class="main">
-     <span>Something coming soon...</span>
-    </main>
+    <div id="card-table">
+      <div id="card-display">
+        <div class="card" onclick="selectCard()">
+            <img id="card-image" src="./cards/deck00.png">
+        </div>
+        <div id="text-display">
+            <h2 class="title" id="card-title"></h2>
+            </br>
+            <span class="description" id="card-description"></span>
+            </br>
+            <p class="small"><a id="ddb-link" href="https://www.dndbeyond.com/magic-items/4617-deck-of-many-things">Deck of Many Things (5E D&D)</a></p>
+        </div>
+    </div>
 </body>
 </html>
