Update to experiment with animations

--- a/tools/deck-of-many/index.html
+++ b/tools/deck-of-many/index.html
@@ -20,11 +20,11 @@
         <a onclick="showCard(0)"><h1>reset</h1></a>
     </div>
     <div id="card-table">
-      <div id="card-display">
-        <div class="card" onclick="selectCard()">
+      <div id="card">
+        <div id="card-display" onclick="selectCard()">
             <img id="card-image" src="./cards/deck00.png">
         </div>
-        <div id="text-display">
+        <div id="text-display" class="scaled-up">
             <h2 class="title" id="card-title"></h2>
             </br>
             <span class="description" id="card-description"></span>
