Add Alchemy base page

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <a class="nav-tab" href="#tab-spirit-board">Spirit Board</a>
             <a class="nav-tab" href="#tab-tarokka-deck">Tarokka</a>
             <a class="nav-tab" href="#tab-sava">Sava</a>
+            <a class="nav-tab" href="#tab-alchemy">Alchemy</a>
             <span class="nav-tab-slider"></span>
         </div>
     </section>
@@ -53,6 +54,10 @@
         </section>
         <section class="slider" id="tab-sava">
             <a href="./tools/sava/index.html"><h1>Sava</h1></a> 
+            <h2>traditional drow strategy game</h2>
+        </section>
+        <section class="slider" id="tab-alchemy">
+            <a href="./tools/alchemy/index.html"><h1>Sava</h1></a> 
             <h2>traditional drow strategy game</h2>
         </section>
     </main>
