--- a/tools/alchemy/index.html
+++ b/tools/alchemy/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Deck of Many Things</title>
+    <title>Alchemy </title>
 	<meta charset="utf-8">
 
 	<!-- Styles -->
