--- a/tools/alchemy/index.html
+++ b/tools/alchemy/index.html
@@ -1,36 +1,39 @@
 <!doctype html>
 <html>
-<head>
-    <title>Alchemy </title>
-	<meta charset="utf-8">
-
-	<!-- Styles -->
-  <link rel="stylesheet" href="../tool-nav.css">
-	<link rel="stylesheet" href="../modal.css">
-	<link rel="stylesheet" href="style.css">
-
-	<!-- Scripts -->
-	<script type="text/javascript" src="./script.js" defer></script>
-
-</head>
-<body>
-    <div class="nav">
-        <a href="../../index.html"><h1>HOME</h1></a>
-        <!-- <a href="#" id="open-modal"><h1>about</h1></a> -->
-        <a onclick="showCard(0)"><h1>reset</h1></a>
-    </div>
-    <div id="card-table">
-      <div id="card">
-        <div id="card-display" onclick="selectCard()">
-            <img id="card-image" src="./cards/deck00.png">
+    <head>
+        <title>Alchemy JSON Editor</title>
+        <meta charset="utf-8">
+        <!-- Styles -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsoneditor/9.10.0/jsoneditor.min.css" integrity="sha512-brXxIa/fpMfluh8HUWyrNssKy/H0oRzA0HhmipgfVwbXPamMUTZn1jEsvoGGwJYCRpSx4idujdul4vFwWgPROA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <!-- Scripts -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jsoneditor/9.10.0/jsoneditor.min.js" integrity="sha512-ruQAvFENqNvZOgUR7kldDYoQQLXs/CTx/ZJJhDpGKB5iqrhdq92S+P6sYsl6HCE+xTIFDhDo2FiZ3PJGKPWjWg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Alchemy</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#"><i class="bi bi-person-fill"></i></i> Premade</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#"><i class="bi bi-person"></i></i> NPC</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#"><i class="bi bi-gem"></i></i> Item</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="container-fluid">
+            <div id="jsoneditor" style="width: 400px; height: 400px;"></div>
         </div>
-        <div id="text-display">
-            <h2 class="title" id="card-title"></h2>
-            </br>
-            <span class="description" id="card-description"></span>
-            </br>
-            <p class="small"><a id="ddb-link" href="https://www.dndbeyond.com/magic-items/4617-deck-of-many-things">Deck of Many Things (5E D&D)</a></p>
-        </div>
-    </div>
-</body>
+    </body>
 </html>
