--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>5E D&D TOOLS</title>
+    <title>RPG TOOLS</title>
 	<meta charset="utf-8">
 
 	<!-- Styles -->
@@ -35,7 +35,7 @@
             <a class="nav-tab" href="#tab-spirit-board">Spirit Board</a>
             <a class="nav-tab" href="#tab-tarokka-deck">Tarokka</a>
             <a class="nav-tab" href="#tab-sava">Sava</a>
-            <a class="nav-tab" href="#tab-alchemy">Alchemy</a>
+            <!-- <a class="nav-tab" href="#tab-alchemy">Alchemy</a> -->
             <span class="nav-tab-slider"></span>
         </div>
     </section>
@@ -56,10 +56,10 @@
             <a href="./tools/sava/index.html"><h1>Sava</h1></a> 
             <h2>traditional drow strategy game</h2>
         </section>
-        <section class="slider" id="tab-alchemy">
-            <a href="./tools/alchemy/index.html"><h1>Sava</h1></a> 
-            <h2>traditional drow strategy game</h2>
-        </section>
+        <!-- <section class="slider" id="tab-alchemy">
+            <a href="./tools/alchemy/index.html"><h1>Alchemy</h1></a> 
+            <h2>Tools and information for the Alchemy VTT</h2>
+        </section> -->
     </main>
     <canvas class="background">Your browser does not support the HTML5 canvas tag.</canvas>
 </body>
