--- a/tools/deck-of-many/index.html
+++ b/tools/deck-of-many/index.html
@@ -17,23 +17,44 @@
 <body>
     <div class="nav">
         <a href="../../index.html"><h1>HOME</h1></a>
-        <!-- <a href="#" id="open-modal"><h1>about</h1></a> -->
         <a onclick="showCard(0)"><h1>reset</h1></a>
     </div>
-    <div id="card-wrapper">
-        <div id="card" onclick="drawCard()">
-            <div id="front" onclick="drawCard()">
-                <img id="image" src="./cards/Back_sm.png">
+    <div id="wrapper">
+        <div id="control-wrapper">
+            <div id="pin-card" class="control" onclick="pinCard()">
+                <i class="fa-solid fa-thumbtack"></i>
             </div>
-            <div id="back" onclick="drawCard()">
-                <!-- <div id="card-contents" onclick="drawCard()"> -->
-                    <h2 id="title"></h2>
-                    </br>
-                    <span id="description"></span>
-                    </br>
-                    <a id="ddb-link" href="https://www.dndbeyond.com/magic-items/4617-deck-of-many-things">Deck of Many Things</a>
+            <div id="deal-card" class="control" onclick="dealCard()">
+                <i class="fa-solid fa-hand"></i>
+            </div>
+            <div id="copy-card" class="control" onclick="copyCard()">
+                <i class="fa-regular fa-copy"></i>
+            </div>
+        </div>
+        <div id="card-wrapper">
+            <div id="card" onclick="drawCard()">
+                <div id="front" onclick="drawCard()">
+                    <img id="image" src="./cards/Back_sm.png">
                 </div>
-            <!-- </div> -->
+                <div id="back" onclick="drawCard()">
+                        <h2 id="title"></h2>
+                        </br>
+                        <span id="description" class="small"></span>
+                        </br>
+                        <a id="ddb-link" href="https://www.dndbeyond.com/magic-items/4617-deck-of-many-things">Deck of Many Things</a>
+                    </div>
+            </div>
+        </div>
+        <div id="hand-wrapper">
+            <div class="hand-card">
+                <span id="Euryale">Euryale</span>
+            </div>
+            <div class="hand-card">
+                <span id="Star">Star</span>
+            </div>
+            <div class="hand-card">
+                <span id="Balance">Balance</span>
+            </div>
         </div>
     </div>
 </body>
