Changed page title

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <section class="nav">
-        <h1>5E D&D TOOLS</h1>
+        <h1>RPG TOOLS</h1>
         <h3 class="span loader">
             <span class="m">B</span>
             <span class="m">Y</span>
