Temp removed Tarokka link.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="nav-container">
             <a class="nav-tab" href="#tab-deck-of-many">Deck of Many</a>
             <a class="nav-tab" href="#tab-spirit-board">Spirit Board</a>
-            <a class="nav-tab" href="#tab-tarokka-deck">Tarokka</a>
+            <!-- <a class="nav-tab" href="#tab-tarokka-deck">Tarokka</a> -->
             <a class="nav-tab" href="#tab-sava">Sava</a>
             <!-- <a class="nav-tab" href="#tab-alchemy">Alchemy</a> -->
             <span class="nav-tab-slider"></span>
@@ -48,10 +48,10 @@
             <a href="./tools/spirit-board/index.html"><h1>Spirit Board</h1></a>
             <h2>vistana séance planchette and answer slate</h2>
         </section>
-        <section class="slider" id="tab-tarokka-deck">
+        <!-- <section class="slider" id="tab-tarokka-deck">
             <a href="./tools/tarokka-deck/index.html"><h1>Tarokka</h1></a>
             <h2>vistana fortune telling cards</h2>
-        </section>
+        </section> -->
         <section class="slider" id="tab-sava">
             <a href="./tools/sava/index.html"><h1>Sava</h1></a> 
             <h2>traditional drow strategy game</h2>
